# DAQ-Technical-Assessment

./: .gitmodules  Important_Info_Firmware  brainstorming.md
firmware/: CMakeLists.txt  Dockerfile  answer.txt
firmware/solution/: CMakeLists.txt  decoder.cpp  decoder.hpp  main.cpp
firmware/solution/main_unit_tests/: CMakeLists.txt  main_tests.cpp
firmware/tests/: CMakeLists.txt  main_tests.cpp  tests.cpp
firmware/tests/test_dbc/: test.dbc
